<resources>
    <string name="app_name">6) 1July_Scroll_View_and_Resources_Kaksha_Sign_Up_You2</string>
    <string name="create_account">Create account</string>
    <string name="password_minimum_6_character">Password ( minimum 6 characters)</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="or">or</string>
    <string name="use_phone_number">USE PHONE NUMBER</string>
    <string name="alma_lawson_example_com">alma.lawson@example.com</string>
    <string name="jane_cooper">Jane Cooper</string>
</resources>